CHATS_SIT/force-app/main/default/objects/batchsit_t_sub_pmt_detail_hist__x.object
<CustomObject>
    <description>batchsit$t_sub_pmt_detail_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_sub_pmt_detail_hist</externalName>
    <fields>
        <fullName>amt_act_paid__c</fullName>
        <label>Activity Fee Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_copay__c</fullName>
        <description>amt_copay</description>
        <externalDeveloperName>amt_copay</externalDeveloperName>
        <label>Copay Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_rate__c</fullName>
        <description>amt_rate</description>
        <externalDeveloperName>amt_rate</externalDeveloperName>
        <label>Rate Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_reg_paid__c</fullName>
        <label>Registration Fee Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_total__c</fullName>
        <description>amt_total</description>
        <externalDeveloperName>amt_total</externalDeveloperName>
        <label>Total Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_trans_paid__c</fullName>
        <label>Transportation Fee Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_level_care__c</fullName>
        <description>cde_level_care</description>
        <externalDeveloperName>cde_level_care</externalDeveloperName>
        <label>Care Level Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_status_detail_pmt_sub__c</fullName>
        <description>cde_status_detail_pmt_sub</description>
        <externalDeveloperName>cde_status_detail_pmt_sub</externalDeveloperName>
        <label>Sub Payment Detail Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_time_trdnl__c</fullName>
        <description>cde_time_trdnl</description>
        <externalDeveloperName>cde_time_trdnl</externalDeveloperName>
        <label>Traditional Time Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_info_addntl__c</fullName>
        <description>cde_type_info_addntl</description>
        <externalDeveloperName>cde_type_info_addntl</externalDeveloperName>
        <label>Additional Information Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_unit_care__c</fullName>
        <description>cde_type_unit_care</description>
        <externalDeveloperName>cde_type_unit_care</externalDeveloperName>
        <label>Unit Care Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnt_unit_care_actual__c</fullName>
        <description>cnt_unit_care_actual</description>
        <externalDeveloperName>cnt_unit_care_actual</externalDeveloperName>
        <label>Actual Unit Care Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnt_unit_care_exptd__c</fullName>
        <description>cnt_unit_care_exptd</description>
        <externalDeveloperName>cnt_unit_care_exptd</externalDeveloperName>
        <label>Expected Unit Care Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_sub_pmt_detail_hist1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_care__c</fullName>
        <description>dte_care</description>
        <externalDeveloperName>dte_care</externalDeveloperName>
        <label>Care Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_created_hist__c</fullName>
        <description>dte_created_hist</description>
        <externalDeveloperName>dte_created_hist</externalDeveloperName>
        <label>History Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_detail_pmt_sub__c</fullName>
        <description>idn_detail_pmt_sub</description>
        <externalDeveloperName>idn_detail_pmt_sub</externalDeveloperName>
        <label>Sub Payment Detail ID</label>
        <length>50</length>
        <referenceTo>batchsit_t_sub_pmt_detail__x</referenceTo>
        <relationshipLabel>Sub Payment Detail Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_sub_pmt_detail_hist</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_detail_pmt_sub_hist__c</fullName>
        <description>idn_detail_pmt_sub_hist</description>
        <externalDeveloperName>idn_detail_pmt_sub_hist</externalDeveloperName>
        <label>Sub Payment Detail History ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>idn_fiscal_rat_fee__c</fullName>
        <label>RAT Fees External Id</label>
        <length>50</length>
        <referenceTargetField>T_FISCAL_RAT_FEES__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_FISCAL_RAT_FEES__c</referenceTo>
        <relationshipLabel>Sub Payment Detail History</relationshipLabel>
        <relationshipName>Sub_Payment_Detail_History</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_pmt_sub__c</fullName>
        <description>idn_pmt_sub</description>
        <externalDeveloperName>idn_pmt_sub</externalDeveloperName>
        <label>Sub Payment ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_prog_fndg__c</fullName>
        <description>idn_prog_fndg</description>
        <externalDeveloperName>idn_prog_fndg</externalDeveloperName>
        <label>Funding Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_sub_pmt_detail_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_adjmt__c</fullName>
        <description>ind_adjmt</description>
        <externalDeveloperName>ind_adjmt</externalDeveloperName>
        <label>Adjustment ID</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_slots_for_cntrct__c</fullName>
        <description>ind_slots_for_cntrct</description>
        <externalDeveloperName>ind_slots_for_cntrct</externalDeveloperName>
        <label>Slots for Contract Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence History</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sub Payment Detail History</label>
    <pluralLabel>Sub Payment Detail History</pluralLabel>
</CustomObject>